bpo-46729: improved str() for BaseExceptionGroup